--- a/StoryCreatorRequirements.tex
+++ b/StoryCreatorRequirements.tex
@@ -31,17 +31,50 @@ This SRS describes the requirements and specifications for the Story Creator mod
 %-------------------------------------------------------------------------------------------------------------
 
 \section{Introduction}%Create a section for the introduction
+	\subsection{Edith}
+	%adding this section to the beginning because he asks for description of the overall product in intro -Nate
+	Edith will be a web-based  educational system designed to help younger students develop an interest in and learn about programming. The user will be able to create a "story" by dragging and dropping objects, giving the objects animations, and creating ways for the user or other users to interact with their story. By doing this students will be able to learn how relationships among objects work in programming.
 	\subsection{Scope}
 	The Story Creator module is intended to function as a display that integrates the work of the Animation Systems module and Visual Editor module in order to allow the user to create an animated story.  This module will employ the Visual Editor and Animation Systems module to interact with objects that are given by the Object Creator.  This module will provide a user interface that combines the displays of the Animation System and Visual Editor module.  Story creator will add extra functionality to the Visual Editor and Animation Systems module and put together the interaction between the Object Creator module in order to specify actions performed by the objects given by the Object Creator module.\
 	\subsection{Purpose}
-	The Story Creator software will allow the user to create a story .  The user will have the ability to create objects that will display their own visual image and animation. \\\\ %Add a space in between these two sections
-	Animations will be able to be specified and used in different ways in order to create an interactive program within the story.  Story Creator will also allow the user to share the story that they create and produce animation.
+	%basically rewrote this section while trying to find the best way to describe the purpose of our team -Nate
+	The purpose of the Story Creator section of the Edith software is to ensure that each other piece of the software can work together as a cohesive whole. This will be done through the user interface by providing a way for the user to select objects and choose actions and animations for each object. From there, the user will be able to interact in different ways with the animated objects they have created and then finalize the "story" they have created so they can keep it or share it among friends. Story creator will construct these interactions between the pieces as well as a pleasant display view for the user.
 	
 %********	Next Team Member!  I ended here in the introduction.  I think it is almost/mainly done.  It will need some tweaks revision later on. ~Brandon ******************************
 	
 %-------------------------------------------------------------------------------------------------------------
 %FUNCTIONAL REQUIREMENTS/USE CASES
 %-------------------------------------------------------------------------------------------------------------
+\section{Functional Requirements/Use Cases}
+	\subsection{"Create a new story"}
+\begin{itemize}
+	\item Actor: The user
+	\item Preconditions/Assumptions: No preconditions.
+	\item Flow of Events: \\
+	 	\ - User will open program. \\
+		\ - User wants to create a new story. \\
+		\ - User will select an option to create a new story.
+	
+	\item Alternatives: A previously created story may already be opened, in that case the user will close the story and proceed with the second event.
+	\item Postconditions: The program will be ready for the user to create a story.
+\end{itemize}
+
+	\subsection{"Create an object"}
+\begin{itemize}
+	\item Actor: The user
+	\item Preconditions/Assumptions: The program is open.
+	\item Flow of Events: \\
+	 	\ - User wants to create an object in their story. \\
+		\ - User will select an option to create an object. \\
+		\ - User will use the mouse to drag the object. \\
+		\ - User will choose where to place the object. \\
+		\ - User will drop the object in that place. \\
+	\item Alternatives: Object may not be compatable with some other objects/animations already in story, in that case user will choose whether to delete the old object or not create the new one.
+	\item Postconditions: The program will display one additional object than it did before.
+\end{itemize}
+
+%********	Next Team Member!  This is where I ended, I went for simple so there  would be other possibilities for use cases. If it ends up with more possibilities than we thought of when we were together as a group this can be consolidated and made to be more complex use cases -Nate ******************************
+
 
 %-------------------------------------------------------------------------------------------------------------
 %NON-FUNCTIONAL REQUIREMENTS
