--- a/StoryCreatorRequirements.tex
+++ b/StoryCreatorRequirements.tex
@@ -33,9 +33,9 @@ This SRS describes the requirements and specifications for the Story Creator mod
 \section{Introduction}%Create a section for the introduction
 	\subsection{Edith}
 	%adding this section to the beginning because he asks for description of the overall product in intro -Nate
-	Edith will be a web-based  educational system designed to help younger students develop an interest in and learn about programming. The user will be able to create a "story" by dragging and dropping objects, giving the objects animations, and creating ways for the user or other users to interact with their story. By doing this students will be able to learn how relationships among objects work in programming.
+	Edith will be a web-based, educational system designed to help younger students develop an interest in and learn about programming. The user will be able to create a "story" by dragging and dropping objects, giving the objects animations, and creating ways for the user or other users to interact with their story. By doing this, students will be able to learn how relationships among objects work in programming.
 	\subsection{Scope}
-	The Story Creator module is intended to function as a display that integrates the work of the Animation Systems module and Visual Editor module in order to allow the user to create an animated story.  This module will employ the Visual Editor and Animation Systems module to interact with objects that are given by the Object Creator.  This module will provide a user interface that combines the displays of the Animation System and Visual Editor module.  Story creator will add extra functionality to the Visual Editor and Animation Systems module and put together the interaction between the Object Creator module in order to specify actions performed by the objects given by the Object Creator module.\
+	The Story Creator module is intended to function as a display that integrates the work of the Animation System module and Visual Editor module in order to allow the user to create an animated story.  This module will employ the Visual Editor and Animation System module to interact with objects that are given by the Object Creator.  This module will provide a user interface that combines the displays of the Animation System and Visual Editor module.  Story creator will add extra functionality to the Visual Editor and Animation System module and put together the interaction between the Object Creator module in order to specify actions performed by the objects given by the Object Creator module.\
 	\subsection{Purpose}
 	%basically rewrote this section while trying to find the best way to describe the purpose of our team -Nate
 	The purpose of the Story Creator section of the Edith software is to ensure that each other piece of the software can work together as a cohesive whole. This will be done through the user interface by providing a way for the user to select objects and choose actions and animations for each object. From there, the user will be able to interact in different ways with the animated objects they have created and then finalize the "story" they have created so they can keep it or share it among friends. Story creator will construct these interactions between the pieces as well as a pleasant display view for the user.
@@ -59,26 +59,204 @@ This SRS describes the requirements and specifications for the Story Creator mod
 	\item Postconditions: The program will be ready for the user to create a story.
 \end{itemize}
 
+		\subsection{"Save a story"}
+\begin{itemize}
+	\item Actor: The user
+		\item Preconditions/Assumptions: None.
+	\item Flow of Events: \\
+	\	- User selects a "save story" option. \\
+	\	- A representation of the story and its objects, scripts, and settings is saved. \\
+	\item Alternatives: If the story has never been saved before, the story editor will prompt
+	the user to "save as."
+	\item Postconditions: The story is saved to the local computer.
+\end{itemize}
+	
+		\subsection{"Close a story"}
+\begin{itemize}
+	\item Actor: The user
+		\item Preconditions/Assumptions: None.
+	\item Flow of Events: \\
+	\	- The user selects an option to close the story. \\
+	\	- The story is removed from the story editor. \\
+	\	- Animations, scripts, and objects associated with the story are cleared from their respective editors. \\
+	\item Alternatives: If the story is not saved, the story editor will prompt the user to
+	save the story. If new objects, animations, or scripts have been created specifically for this
+	story and have not been saved, the story editor will also prompt the user to save these
+	new components.
+	\item Postconditions: None.
+\end{itemize}
+	
 	\subsection{"Create an object"}
 \begin{itemize}
 	\item Actor: The user
-	\item Preconditions/Assumptions: The program is open.
+	% changed from program is open to scene is open -BR
+	\item Preconditions/Assumptions: A scene is open. 
 	\item Flow of Events: \\
 	 	\ - User wants to create an object in their story. \\
 		\ - User will select an option to create an object. \\
 		\ - User will use the mouse to drag the object. \\
 		\ - User will choose where to place the object. \\
 		\ - User will drop the object in that place. \\
-	\item Alternatives: Object may not be compatable with some other objects/animations already in story, in that case user will choose whether to delete the old object or not create the new one.
+	\item Alternatives: Object may not be compatible with some other objects/animations already in story, in that case user will choose whether to delete the old object or not create the new one.
 	\item Postconditions: The program will display one additional object than it did before.
 \end{itemize}
 
 %********	Next Team Member!  This is where I ended, I went for simple so there  would be other possibilities for use cases. If it ends up with more possibilities than we thought of when we were together as a group this can be consolidated and made to be more complex use cases -Nate ******************************
 
+	\subsection{"Remove an object"}
+\begin{itemize}
+	\item Actor: The user
+	\item Preconditions/Assumptions: At least one object is in the scene.
+	\item Flow of Events: \\
+	\	- User selects an option to delete objects. \\
+	\	- User selects the object to delete. \\
+	\	- The object disappears  from the scene. \\
+	\item Alternatives: None.
+	\item Postconditions: The program will display one fewer object than it did before.
+\end{itemize}
+
+	\subsection{"Move an object"}
+\begin{itemize}
+	\item Actor: The user
+		\item Preconditions/Assumptions: At least one object is in the scene.
+	\item Flow of Events: \\
+	\	- User selects an option to move objects. \\
+	\	- User drags the object from its original location to a new one. \\
+	\item Alternatives: If the user attempts to drag the object outside of the scene, the object
+	will stay within the scene frame's boundaries.
+	\item Postconditions: None.
+\end{itemize}
+
+	%--- I'm not sure if these should be longer... Right now there's not much 
+	% I can think of for event flow besides interacting with the visual editor.
+	
+	\subsection{"Develop a script"}
+\begin{itemize}
+		\item Actor: The user
+		\item Preconditions/Assumptions: None.
+	\item Flow of Events: \\
+	\	- User interacts with the visual editor to develop a new script. \\
+	\item Alternatives: None.
+	\item Postconditions: A script is added to the visual editor's list of scripts.
+\end{itemize}
+
+	\subsection{"Edit a script"}
+\begin{itemize}
+		\item Actor: The user
+		\item Preconditions/Assumptions: None.
+	\item Flow of Events: \\
+	\	- User interacts with the visual editor to edit a script. \\
+	\item Alternatives: None.
+	\item Postconditions: A script in the visual editor's list of scripts is changed.
+\end{itemize}
+
+	\subsection{"Delete a script"}
+\begin{itemize}
+		\item Actor: The user
+		\item Preconditions/Assumptions: None.
+	\item Flow of Events: \\
+	\	- User interacts with the visual editor to delete a script. \\
+	\item Alternatives: None.
+	\item Postconditions: A script in the visual editor's list of scripts is removed.
+\end{itemize}
+	%------
+	
+	% Another question. If the user makes objects or scripts, can they reuse them in 
+	% other scenes, or just in the present scene? I'm leaving both options open here,
+	% and generalizing to just say that the object or script is "saved."
+	\subsection{"Save an object or script"}
+\begin{itemize}
+	\item Actor: The user
+		\item Preconditions/Assumptions: The user has created a new object or script.
+	\item Flow of Events: \\
+	\	- The user wants to save an object or script for reuse. \\
+	\	- A representation of the object or script is saved. \\
+	\item Alternatives: If the story has never been saved before, the story editor will prompt
+	the user to "save as."
+	\item Postconditions: The object or script is available for reuse in the scene. It can
+	also be made available for reuse in other scenes.
+\end{itemize}
+	
+	\subsection{"Animate an object"}
+\begin{itemize}
+	\item Actor: The user
+		\item Preconditions/Assumptions: At least one object is in the scene and one script is \\
+		in the visual editor. \\
+	\item Flow of Events: \\
+	\	- User selects a script from the visual editor. \\
+	\	- User drags or otherwise attaches the script to an object in the scene.
+	\item Alternatives: None.
+	\item Postconditions: The object has an associated script/animation.
+\end{itemize}
+
+	\subsection{"Play back animation for a single object"}
+\begin{itemize}
+	\item Actor: The user
+		\item Preconditions/Assumptions: At least one object is in the scene.
+	\item Flow of Events: \\
+	\	- User selects an option to play back object animations. \\
+	\	- User selects a "play" option. \\
+	\item Alternatives: None.
+	\item Postconditions: None.
+\end{itemize}
+
+	\subsection{"Playback a story"}
+\begin{itemize}
+	\item Actor: The user
+		\item Preconditions/Assumptions: None.
+	\item Flow of Events: \\
+	\	- User selects a "play scene" option. \\
+	\	- The story plays for the user in the animation viewer. \\
+	\item Alternatives: The user may interrupt playback with a variety
+	of options, including stop, fast-forward, or rewind. The playback system will respond
+	to these options. In the case of "stop," the scene playback will cancel. In the case of
+	fast-forward or rewind, the scene will progress forward or backward more rapidly as long
+	as the user continues to select the fast-forward or rewind option.
+	\item Postconditions: None.	
+\end{itemize}
+
+		\subsection{"Share a story"}
+\begin{itemize}
+	\item Actor: The user
+		\item Preconditions/Assumptions: None.
+	\item Flow of Events: \\
+	\	- User selects a "publish story option." \\
+	\	- The story is converted to a representation that the sharing framework can read. \\
+	\	- The story representation is sent to the sharing framework so that it can share the scene. \\
+	\item Alternatives: If the story is not saved, or changes have been made since the last save,
+	the story editor will prompt the user to save the story before sharing it.
+	\item Postconditions: None.
+\end{itemize}
 
 %-------------------------------------------------------------------------------------------------------------
 %NON-FUNCTIONAL REQUIREMENTS
 %-------------------------------------------------------------------------------------------------------------
+\section{Nonfunctional Requirements}
+	\subsection{"Ease of Use"}
+	The system should be easy for novices to use. One test of the system's usability is the
+	number of errors made per hour of use. An "error" is defined as the user selecting the
+	wrong options for: \\ \\
+		\indent a) adding, editing, or deleting an object \\
+		\indent b) attaching a script/animation to an object \\
+		\indent c) saving and sharing the story \\
+		\indent d) playing back the story. \\ \\
+	The number of errors made by experienced users may differ significantly from those made
+	by first-time or novice user. An experienced user should make no more than 3-5 errors per 			hour. While there is some complexity to the story editor, an expereinced user should not
+	have trouble knowing which options to choose to add objects or play the scene, for example.
+	In comparison to the rest of the system, the story editor should be relatively similar to
+	navigate, like a programming IDE or video editing system. Novice users may make many
+	more errors when initially learning the system, but the system should not be frustrating to
+	learn because it is designed to engage novice programmers and to make the task of programming
+	feel simple and intuitive. Anything beyond 5-15 errors within 1-3 hours of use would be too 			many.
+	
+%============ To the next team member! I added in several new use cases...
+% it may be that we can consolidate several cases into one, for example,
+% all of the object cases - add object/edit object/delete object could
+% maybe be combined into one case. I also added a nonfunctional requirement.
+% I think they're almost done, but will need some edits and revisions
+% I'll make another pass later. -Billy
+%===========
+
 
 %-------------------------------------------------------------------------------------------------------------
 %GLOSSARY/REFERENCES
