Fixes some formatting issues in the flow of events sections.

--- a/StoryCreatorRequirements.tex
+++ b/StoryCreatorRequirements.tex
@@ -65,7 +65,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\item Preconditions/Assumptions: None.
 	\item Flow of Events: \\
 	\	- User selects a "save story" option. \\
-	\	- A representation of the story and its objects, scripts, and settings is saved. \\
+	\	- A representation of the story and its objects, scripts, and settings is saved.
 	\item Alternatives: If the story has never been saved before, the story editor will prompt
 	the user to "save as."
 	\item Postconditions: The story is saved to the local computer.
@@ -78,7 +78,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 	\item Flow of Events: \\
 	\	- The user selects an option to close the story. \\
 	\	- The story is removed from the story editor. \\
-	\	- Animations, scripts, and objects associated with the story are cleared from their respective editors. \\
+	\	- Animations, scripts, and objects associated with the story are cleared from their respective editors.
 	\item Alternatives: If the story is not saved, the story editor will prompt the user to
 	save the story. If new objects, animations, or scripts have been created specifically for this
 	story and have not been saved, the story editor will also prompt the user to save these
@@ -96,7 +96,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\ - User will select an option to create an object. \\
 		\ - User will use the mouse to drag the object. \\
 		\ - User will choose where to place the object. \\
-		\ - User will drop the object in that place. \\
+		\ - User will drop the object in that place.
 	\item Alternatives: Object may not be compatible with some other objects/animations already in story, in that case user will choose whether to delete the old object or not create the new one.
 	\item Postconditions: The program will display one additional object than it did before.
 \end{itemize}
@@ -110,7 +110,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 	\item Flow of Events: \\
 	\	- User selects an option to delete objects. \\
 	\	- User selects the object to delete. \\
-	\	- The object disappears  from the scene. \\
+	\	- The object disappears  from the scene.
 	\item Alternatives: None.
 	\item Postconditions: The program will display one fewer object than it did before.
 \end{itemize}
@@ -121,7 +121,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\item Preconditions/Assumptions: At least one object is in the scene.
 	\item Flow of Events: \\
 	\	- User selects an option to move objects. \\
-	\	- User drags the object from its original location to a new one. \\
+	\	- User drags the object from its original location to a new one.
 	\item Alternatives: If the user attempts to drag the object outside of the scene, the object
 	will stay within the scene frame's boundaries.
 	\item Postconditions: None.
@@ -135,7 +135,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\item Actor: The user
 		\item Preconditions/Assumptions: None.
 	\item Flow of Events: \\
-	\	- User interacts with the visual editor to develop a new script. \\
+	\	- User interacts with the visual editor to develop a new script.
 	\item Alternatives: None.
 	\item Postconditions: A script is added to the visual editor's list of scripts.
 \end{itemize}
@@ -145,7 +145,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\item Actor: The user
 		\item Preconditions/Assumptions: None.
 	\item Flow of Events: \\
-	\	- User interacts with the visual editor to edit a script. \\
+	\	- User interacts with the visual editor to edit a script.
 	\item Alternatives: None.
 	\item Postconditions: A script in the visual editor's list of scripts is changed.
 \end{itemize}
@@ -155,7 +155,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\item Actor: The user
 		\item Preconditions/Assumptions: None.
 	\item Flow of Events: \\
-	\	- User interacts with the visual editor to delete a script. \\
+	\	- User interacts with the visual editor to delete a script.
 	\item Alternatives: None.
 	\item Postconditions: A script in the visual editor's list of scripts is removed.
 \end{itemize}
@@ -170,7 +170,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\item Preconditions/Assumptions: The user has created a new object or script.
 	\item Flow of Events: \\
 	\	- The user wants to save an object or script for reuse. \\
-	\	- A representation of the object or script is saved. \\
+	\	- A representation of the object or script is saved.
 	\item Alternatives: If the story has never been saved before, the story editor will prompt
 	the user to "save as."
 	\item Postconditions: The object or script is available for reuse in the scene. It can
@@ -180,8 +180,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 	\subsection{"Animate an object"}
 \begin{itemize}
 	\item Actor: The user
-		\item Preconditions/Assumptions: At least one object is in the scene and one script is \\
-		in the visual editor. \\
+		\item Preconditions/Assumptions: At least one object is in the scene and one script is in the visual editor.
 	\item Flow of Events: \\
 	\	- User selects a script from the visual editor. \\
 	\	- User drags or otherwise attaches the script to an object in the scene.
@@ -195,7 +194,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\item Preconditions/Assumptions: At least one object is in the scene.
 	\item Flow of Events: \\
 	\	- User selects an option to play back object animations. \\
-	\	- User selects a "play" option. \\
+	\	- User selects a "play" option.
 	\item Alternatives: None.
 	\item Postconditions: None.
 \end{itemize}
@@ -206,7 +205,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\item Preconditions/Assumptions: None.
 	\item Flow of Events: \\
 	\	- User selects a "play scene" option. \\
-	\	- The story plays for the user in the animation viewer. \\
+	\	- The story plays for the user in the animation viewer.
 	\item Alternatives: The user may interrupt playback with a variety
 	of options, including stop, fast-forward, or rewind. The playback system will respond
 	to these options. In the case of "stop," the scene playback will cancel. In the case of
@@ -222,7 +221,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 	\item Flow of Events: \\
 	\	- User selects a "publish story option." \\
 	\	- The story is converted to a representation that the sharing framework can read. \\
-	\	- The story representation is sent to the sharing framework so that it can share the scene. \\
+	\	- The story representation is sent to the sharing framework so that it can share the scene.
 	\item Alternatives: If the story is not saved, or changes have been made since the last save,
 	the story editor will prompt the user to save the story before sharing it.
 	\item Postconditions: None.
