small spelling change

--- a/StoryCreatorRequirements copy.tex
+++ b/StoryCreatorRequirements copy.tex
@@ -243,7 +243,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 		\indent c) saving and sharing the story \\
 		\indent d) playing back the story. \\ \\
 	The number of errors made by experienced users may differ significantly from those made
-	by first-time or novice user. An experienced user should make no more than 3-5 errors per 			hour. While there is some complexity to the story editor, an expereinced user should not
+	by first-time or novice user. An experienced user should make no more than 3-5 errors per 			hour. While there is some complexity to the story editor, an experienced user should not
 	have trouble knowing which options to choose to add objects or play the scene, for example.
 	In comparison to the rest of the system, the story editor should be relatively similar to
 	navigate, like a programming IDE or video editing system. Novice users may make many
