updates LaTeX file, PDF, and adds UML image

--- a/Animation_Requirement_Spec.tex
+++ b/Animation_Requirement_Spec.tex
@@ -48,69 +48,44 @@ Details hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails 
 \begin{enumerate}
   \item Actor
   \begin{enumerate}
-  		\item Actor here
-   		 \item Or here
+  		\item "Drawer": The system providing us with sprites to animate and sounds to play.
+   		 \item "Taker": The system that takes and displays our canvas.
+		\item Animation System: The system we are creating that handles back-end animation and final.
   \end{enumerate}
   \item Preconditions/Assumptions
   \begin{enumerate}
-   		 \item Preconditions 
-   		 \item Assumptions
+   		 \item Preconditions: The user has already defines which sprites will be animated and which sounds will be played.
+   		 \item Assumptions: The web browser supports HTML5 and JavaScript.
   \end{enumerate}
   \item Flow of Events
   \begin{enumerate}
-   		 \item Flow here
-   		 \item Sun Flows?
+   		 \item "Drawer" provides drawing instructions to the Animation System. 
+   		 \item The Animation System processes the instructions.
+		\item The Animation System creates animations and plays sounds.
+		\item The Animation System provides the animations to the "Taker."
   \end{enumerate}
   \item Alternatives
   \begin{enumerate}
-    		\item Flows that deviate from the main flow. "Exceptions"
-    		\item More here
+    		\item The "Drawer" provides faulty drawing instructions.
+    		\item The Animation System attempts and fails to process instructions.
+		\item The Animation System passes the error to the "Taker."
   \end{enumerate}
-  \item  Postconditions
-  \begin{enumerate}
-    		\item Postconditions
-    		\item More here
-  \end{enumerate}
+  %\item  Postconditions
+  %\begin{enumerate}
+  % 		\item 
+  %\end{enumerate}
 \end{enumerate}
 
-	\subsection{"Use Case 2 NAME"}
-\begin{enumerate}
-  \item Actor
-  \begin{enumerate}
-  		\item Actor here
-   		 \item Or here
-  \end{enumerate}
-  \item Preconditions/Assumptions
-  \begin{enumerate}
-   		 \item Preconditions 
-   		 \item Assumptions
-  \end{enumerate}
-  \item Flow of Events
-  \begin{enumerate}
-   		 \item Flow here
-   		 \item Sun Flows?
-  \end{enumerate}
-  \item Alternatives
-  \begin{enumerate}
-    		\item Flows that deviate from the main flow. "Exceptions"
-    		\item More here
-  \end{enumerate}
-  \item  Postconditions
-  \begin{enumerate}
-    		\item Postconditions
-    		\item More here
-  \end{enumerate}
-\end{enumerate}
+	
 
 \subsection{UML}
-\includegraphics[scale=.5]{EXAMPLEUML.png}
-Caption of UML? 
-
+\includegraphics[scale=.7]{UML.png}
+UML Diagram of Animation System Flow of Events
 
 
 %Nonfunctional Requirements
 \section{\emph{Nonfunctional Requirements}}
-List and briefly describe (in a sentence or two) the nonfunctional requirements for your product. Try to describe the nonfunctional requirements in a testable manner; how will you know if you've made the system "easy to use"?
+L
 
 %Glossary/References
 \section{\emph{Glossary/References}}
