--- a/Animation_Requirement_Spec.tex
+++ b/Animation_Requirement_Spec.tex
@@ -35,7 +35,7 @@ Our Summary will be placed here!Our Summary will be placed here!Our Summary will
 %Introduction
 \section{\emph{Introduction}}%Create a section for the introduction
 	\subsection{Edith}
-Details hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails here
+         Edith is a 2D, web-based system to help students learn to program and get excited about computer science. The system will allow students to program relationships among objects in a virtual world, in order to create animations. It will offer several useful capabilities: users will be able to create objects for their story using a graphical, drag and drop interface; specify animated behaviors for these objects using a visual programming language; add user interactions to create game-like experiences; and share their creations with others. 
 	\subsection{Module}
 	Details hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails here
 	\subsection{Purpose}
