modifies tex file to add glossary and references and changes order of non-functional requirements

--- a/Animation_Requirement_Spec.tex
+++ b/Animation_Requirement_Spec.tex
@@ -15,7 +15,7 @@
  	\huge \textsc{\textbf{Animation Team \\Requirement Specifications} }	
 	\bigskip 
 	\rule{130mm}{.1pt}
-	\textsc{\textbf{September 25 2013 \\ Revised: September 25 2013} \\ }	
+	\textsc{\textbf{September 25, 2013 \\ Revised: September 28, 2013} \\ }	
 	\vspace*{\fill}%
 	Eric Lund \\
 	Kramer Canfield \\ 
@@ -44,7 +44,7 @@ Our Summary will be placed here!Our Summary will be placed here!Our Summary will
 
 % Use Cases
 \section{\emph{Functional Requirements}}
-	\subsection{"Use Case 1 NAME"}
+	\subsection{"Use Case 1: Providing Animations and Playing Sounds"}
 \begin{enumerate}
   \item Actor
   \begin{enumerate}
@@ -79,16 +79,31 @@ Our Summary will be placed here!Our Summary will be placed here!Our Summary will
 	
 
 \subsection{UML}
-\includegraphics[scale=.7]{UML.png}
+\includegraphics[scale=.4]{UML.png}
 UML Diagram of Animation System Flow of Events
 
 
 %Nonfunctional Requirements
 \section{\emph{Nonfunctional Requirements}}
-L
+
+\begin{itemize}
+	\item Ease-of-Use: Specific documentation of options for animation provided to the "Drawer" on animations that we can provide.
+	\item Documentation: Specific documentation of instructions provided to the "Taker" on how to receive the dynamic picture frame (the canvas).
+\end{itemize}
 
 %Glossary/References
 \section{\emph{Glossary/References}}
-Finally, be sure to define the specialized terms you use (if any!), and to include citations to any references you make (e.g., if you reference any other systems as comparison points). Always provide proper attribution to other people's work.
+Glossary:
+\begin{itemize}
+	\item Canvas: The JavaScript and HTML5 "dynamic picture frame" to give to the "Taker."
+	\item Sprite:  a computer graphic that may be moved on-screen and otherwise manipulated as a single entity
+\end{itemize}
+
+\noindent References: 
+\begin{itemize}
+	\item LaTeX WikiBook http://en.wikibooks.org/wiki/LaTeX
+	\item Edith Project Description http://cs.pugetsound.edu/~jross/courses/cs240/project/edith/
+	\item New Oxford American Dictionary (American English)
+\end{itemize}
 
 \end{document}
