Added Purpose section

--- a/Animation_Requirement_Spec.tex
+++ b/Animation_Requirement_Spec.tex
@@ -39,7 +39,7 @@ Our Summary will be placed here!Our Summary will be placed here!Our Summary will
 	\subsection{Module}
 	The Animation Module accepts a properly formatted instruction set to construct an animated scene. An animated scene consists of a canvas that can include pre-defined image sprites and pre-defined audio files provided by the Object Creator Module. The scene is installed in the final UI by the Story Creator Module. 
 	\subsection{Purpose}
-	Details hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails here	Details hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails hereDetails here
+        The Animation Module allows the user to render animations without knowledge of a scripting language. This is possible by applying pre-defined animation sets to image sprites. The module also allows the user to include audio with their animations. The module is intended to interpret animation instructions and render an animation sequence.
 
 
 % Use Cases
